--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <h3 class="text-2xl font-semibold mb-2">Flutter</h3>
                     <p class="text-lg">A modern framework for cross-platform mobile app development.</p>
                 </div>
-                <div class="card bg-gradient-to-r from-teal-400 to-blue-600 text-white p-6 rounded-lg">
+                <div class="card bg-gradient-to-r from-red-400 to-blue-600 text-black p-6 rounded-lg">
                     <h3 class="text-2xl font-semibold mb-2">Java</h3>
                     <p class="text-lg">Widely used for building robust and scalable applications.</p>
                 </div>
